--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="net.blusoft.appautobusesbackoffice.MainActivity">
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
@@ -33,7 +33,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
@@ -44,7 +44,7 @@
         android:hint="Fecha Inicio"
         android:layout_below="@+id/rdgGrupo"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/editTextHFin" />
+        android:layout_toStartOf="@+id/rdgGrupo" />
 
     <RadioGroup
         android:id="@+id/rdgGrupo"
@@ -54,13 +54,13 @@
         android:orientation="vertical"
         android:weightSum="1"
         android:layout_below="@+id/editTextMatricula"
-        android:layout_alignStart="@+id/editTextMatricula"
-        android:layout_marginStart="20dp">
+        android:layout_centerHorizontal="true">
 
         <RadioButton
             android:text="Entre Fechas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onRadioButtonClicked"
             android:layout_marginTop="26dp"
             android:id="@+id/radioButtonHoras" />
 
@@ -68,6 +68,7 @@
         android:text="Última Posición"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+            android:onClick="onRadioButtonClicked"
         android:layout_marginTop="40dp"
         android:id="@+id/radioButtonUltPos" />
 
@@ -77,7 +78,7 @@
         android:text="Enviar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/buttonEnviar"
         android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/editTextHFin"
-        android:id="@+id/buttonEnviar" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
