--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,14 @@
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/rdgGrupo" />
 
+    <Button
+        android:text="Enviar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonEnviar"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
     <RadioGroup
         android:id="@+id/rdgGrupo"
         android:layout_width="wrap_content"
@@ -70,15 +78,8 @@
         android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked"
         android:layout_marginTop="40dp"
-        android:id="@+id/radioButtonUltPos" />
+        android:id="@+id/radioButtonUltPos"
+            android:checked="true" />
 
     </RadioGroup>
-
-    <Button
-        android:text="Enviar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonEnviar"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
 </RelativeLayout>
