--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,15 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent" >
 
     <Button android:id="@+id/btnOpciones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tornar" />
+        android:text="@string/tornar" />
 
-<fragment
+    <fragment
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
-    </RelativeLayout>
+    android:layout_height="match_parent"
+    />
+
+    <Button android:id="@+id/btnAturarActualitzacioAutomatica"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/atura_act_aut"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+</RelativeLayout>
